cc: Fix target_size in SoftwareImageDecodeCacheUtils::CacheKey.

This CL fixes the computation of the target_size in FromDrawImage() when
the target_size is updated to the size of a mip level. Previously, the
computation rounded down which was inconsistent with the behavior
introduced in https://crrev.com/c/1107049.

Test: the artifact in the referenced bug is no longer present.
Bug: 891316
Change-Id: If8838c1501cbbcedd8261ddf6eac81f21cdca947
Reviewed-on: https://chromium-review.googlesource.com/c/1321774
Commit-Queue: Andres Calderon Jaramillo <andrescj@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607032}
Former-commit-id: 1eb1dbc521da1a29571a98759ba86bbf6809bf06